--- a/css/main.css
+++ b/css/main.css
@@ -16,13 +16,13 @@ a {
 }
 /* HEADER */
 header {
-  background-color: royalblue;
+  background-color: #f6f5f0;
+  border-bottom: 1px solid #c8c8c8;
 }
 header .inner {
   width: 1100px;
   height: 120px;
   margin: 0 auto;
-  background-color: orange;
   position: relative;
 }
 header .logo {
@@ -32,9 +32,11 @@ header .logo {
   bottom: 0;
   left: 0;
   margin: auto;
-  display: none;
 }
 header .sub-menu {
+  position: absolute;
+  top: 10px;
+  right: 0;
   display: flex;
 }
 header .sub-menu ul.menu {
