:sparkles: add promotion section

--- a/css/main.css
+++ b/css/main.css
@@ -373,3 +373,26 @@ header .badges .badge {
 .notice .notice-line .inner__right .toggle-promotion .material-icons {
   font-size: 30px;
 }
+.notice .promotion {
+  height: 693px;
+  background-color: #f6f5ef;
+  position: relative;
+}
+.notice .promotion .swiper-container {
+  width: calc(819px * 3 + 20px);
+  height: 553px;
+
+  text-align: center;
+  position: absolute;
+  top: 40px;
+  /* 정중앙에 배치하기-left or right */
+  right: 50%;
+  margin-right: calc((819px * 3 + 20px) / -2);
+}
+
+.notice .promotion .swiper-slide {
+  opacity: 0.2;
+}
+.notice .promotion .swiper-slide-active {
+  opacity: 1;
+}
