--- a/css/main.css
+++ b/css/main.css
@@ -288,8 +288,6 @@ header .badges .badge {
 }
 
 /* NOTICE */
-.notice {
-}
 .notice .notice-line {
   position: relative;
 }
@@ -457,4 +455,48 @@ header .badges .badge {
 .notice .promotion .swiper-next {
   right: 50%;
   margin-right: -480px;
+}
+
+/* REWARDS */
+.rewards {
+  position: relative;
+}
+.rewards .bg-left {
+  width: 50%;
+  height: 100%;
+  background-color: #272727;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.rewards .bg-right {
+  width: 50%;
+  height: 100%;
+  background-color: #d5c798;
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+.rewards .inner {
+  background-image: url("../images/rewards.jpg");
+  height: 241px;
+}
+.rewards .btn-group {
+  position: absolute;
+  bottom: 24px;
+  right: 0;
+  width: 250px;
+  display: flex;
+  flex-wrap: wrap;
+}
+.rewards .btn-group .sign-up {
+  margin-right: 10px;
+}
+.rewards .btn-group .sign-in {
+  width: 110px;
+}
+.rewards .btn-group .gift {
+  margin-top: 10px;
+  /* 최대한의 width 사용, 즉 btn-group의 width 250만큼 늘어남 */
+  flex-grow: 1;
 }
