--- a/css/main.css
+++ b/css/main.css
@@ -542,3 +542,22 @@ header .badges .badge {
   top: 0;
   bottom: 0;
 }
+
+.youtube .inner {
+  height: 700px;
+}
+.youtube .inner .floating1 {
+  position: absolute;
+  top: 50px;
+  left: 0;
+}
+.youtube .inner .floating2 {
+  position: absolute;
+  top: 350px;
+  left: 150px;
+}
+.youtube .inner .floating3 {
+  position: absolute;
+  bottom: -200px;
+  right: 0;
+}
