--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,7 @@ body {
   font-weight: 400;
   line-height: 1.4;
   font-family: "Nanum Gothic", sans-serif;
-  height: 3000px;
+  /* height: 3000px; */
 }
 
 img {
@@ -556,8 +556,50 @@ header .badges .badge {
   top: 350px;
   left: 150px;
 }
-.youtube .inner .floating3 {
+
+/* SEASON-product */
+
+.season-product {
+  background-image: url("../images/season_product_bg.jpg");
+}
+
+.season-product .text-group {
   position: absolute;
-  bottom: -200px;
+  top: 110px;
+  right: 100px;
+}
+.season-product .inner .floating3 {
+  position: absolute;
+  top: -200px;
+  right: 0;
+}
+.season-product .text-group .title {
+  margin-bottom: 10px;
+}
+.season-product .text-group .description {
+  margin-bottom: 15px;
+}
+
+/* RESERVE-COFFEE */
+
+.reserve-coffee {
+  background-image: url("../images/reserve_bg.jpg");
+}
+.reserve-coffee .inner {
+  height: 400px;
+}
+.reserve-coffee .reserve-logo {
+  position: absolute;
+  top: 110px;
+  left: 0;
+}
+.reserve-coffee .text-group {
+  position: absolute;
+  top: 124px;
+  left: 208px;
+}
+.reserve-coffee .product {
+  position: absolute;
+  top: 0;
   right: 0;
 }
