--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,7 @@ body {
   font-weight: 400;
   line-height: 1.4;
   font-family: "Nanum Gothic", sans-serif;
-  /* height: 3000px; */
+  /* height: 6000px; */
 }
 
 img {
@@ -562,7 +562,9 @@ header .badges .badge {
 .season-product {
   background-image: url("../images/season_product_bg.jpg");
 }
-
+.season-product .inner {
+  height: 400px;
+}
 .season-product .text-group {
   position: absolute;
   top: 110px;
@@ -602,4 +604,30 @@ header .badges .badge {
   position: absolute;
   top: 0;
   right: 0;
+}
+
+/* PICK-favorite */
+
+.pick-favorite {
+  background-image: url("../images/favorite_bg.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-attachment: fixed;
+  background-size: cover;
+}
+.pick-favorite .inner {
+  padding: 110px 0;
+}
+.pick-favorite .text-group {
+  margin-left: 100px;
+  display: flex;
+  width: 362px;
+  flex-wrap: wrap;
+  justify-content: flex-end;
+}
+.pick-favorite .text-group .title {
+  margin-bottom: 40px;
+}
+.pick-favorite .text-group .description {
+  margin-bottom: 40px;
 }
