--- a/css/main.css
+++ b/css/main.css
@@ -820,7 +820,36 @@ footer .menu li a {
 footer .menu li a.green {
   color: #669900;
 }
-footer {
+footer .btn-group {
+  margin-top: 20px;
+  display: flex;
+  justify-content: center;
 }
-footer {
+footer .btn-group .btn {
+  font-size: 12px;
+  margin-right: 10px;
+}
+footer .btn-group .btn:last-child {
+  margin-right: 0;
+}
+footer .info {
+  margin-top: 30px;
+  text-align: center;
+}
+footer .info span {
+  margin-right: 20px;
+  color: #999;
+  font-size: 12px;
+}
+footer .info span:last-child {
+  margin-right: 0;
+}
+footer .copywrite {
+  color: #999;
+  text-align: center;
+  margin-top: 12px;
+  font-size: 12px;
+}
+footer .logo {
+  margin: 30px auto 0;
 }
